// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList runTask will run a task by taskName 1`] = `
Object {
  "meta": Object {
    "friendlyTaskName": "Mock Task",
    "taskClassification": Object {
      "category": "insights",
      "priority": "high",
    },
    "taskName": "mock-task",
  },
  "result": "mock-task is being run",
}
`;

exports[`TaskList runTasks will run all registered tasks 1`] = `
Object {
  "meta": Object {
    "friendlyTaskName": "Mock Task",
    "taskClassification": Object {
      "category": "insights",
      "priority": "high",
    },
    "taskName": "mock-task",
  },
  "result": "mock-task is being run",
}
`;

exports[`TaskList runTasks will run all registered tasks 2`] = `
Object {
  "meta": Object {
    "friendlyTaskName": "Insights Task High",
    "taskClassification": Object {
      "category": "insights",
      "priority": "high",
    },
    "taskName": "insights-task-high",
  },
  "result": "insights task high is being run",
}
`;
